Added 1st Section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,28 @@
 		</nav>
 
 		<!-- Section 1 -->
+		<div class="container-fluid pd-top bg-image">
+			<div class="container text-center">
+				<div class="pd-top-160">
+					<img src="images/logo.png" alt="Bootstrap" width="500" height="194">
+				</div>
+				<div class="pd-50">
+					<h3 class="text-white">BRINGING QUALITY MUNCH TO DUBLIN</h3>
+				</div>
+			</div>
+		</div>
+
+		<!-- Section 2 -->
 		<div class="container-fluid">
+			<div class="container text-center">
+				<div class="row">
+					<div class="col">
+						<div class="card">
+							<img src="" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
