--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<title>Greenville Deli CA Project</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/style.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 	<body>
 		<!-- Nav Bar -->
@@ -18,15 +22,16 @@
 					<g id="Burger Menu">
 					<path id="Burger Menu_2" d="M3 3H43M3 18H43M3 33H43" stroke="#F8F8F8" stroke-width="4.5" stroke-linecap="round" stroke-linejoin="round"/>
 					</g>
-					</svg></a>
+					</svg>
+				</a>
 			</div>
 		</nav>
 
 		<!-- Section 1 -->
-		<div class="container-fluid pd-top bg-image">
+		<div class="container-fluid bg-image center-div">
 			<div class="container text-center">
-				<div class="pd-top-160">
-					<img src="images/logo.png" alt="Bootstrap" width="500" height="194">
+				<div class="pd-top-100">
+					<img src="images/logo.png" alt="" width="500" height="250">
 				</div>
 				<div class="pd-50">
 					<h3 class="text-white">BRINGING QUALITY MUNCH TO DUBLIN</h3>
@@ -37,13 +42,146 @@
 		<!-- Section 2 -->
 		<div class="container-fluid">
 			<div class="container text-center">
-				<div class="row">
+				<div>
+					<!-- <a href="https://www.instagram.com/greenvilledeli/" class="class="link-underline-opacity-0""><h2 class="text-primary pt-5">GALLERY</h2></a> -->
+					<h2 class="text-primary pt-5">WHAT WE HAVE TO OFFER</h2>
+				</div>
+
+				<!-- Row 1 -->
+				<div class="row pt-5">
 					<div class="col">
-						<div class="card">
-							<img src="" alt="">
+						<div class="card"> 
+							<img src= "images/Rectangle 1.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div> 
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 2.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div>
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 3.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div>
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 4.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div>  
 						</div>
 					</div>
 				</div>
+
+
+				<!-- Row 2 -->
+				<div class="row pt-5">
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 1 row 2.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div> 
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 2 row 2.png" 
+							    class="card-img-bottom">
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div>
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 3 row 2.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div>
+					</div>
+					<div class="col">
+						<div class="card"> 
+							<img src= "images/Rectangle 4 row 2.png" 
+							    class="card-img-bottom"> 
+							<div class="card-body card-img-overlay text-white bottom-div"> 
+								<a href="#" class="text-white">
+									<p class="card-text"> 
+										<small> 
+											GeeksforGeeks 
+										</small> 
+									</p> 
+								</a>
+							</div> 
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Section 3 -->
+		<div class="container-fluid bg-primary">
+			<div class="container">
+				
 			</div>
 		</div>
 	</body>
