Added Reviews and finished the form

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 	<body>
 		<!-- Nav Bar -->
@@ -50,14 +52,14 @@
 				<!-- Row 1 -->
 				<div class="row pt-5">
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 1.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -65,14 +67,14 @@
 						</div> 
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 2.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -80,14 +82,14 @@
 						</div>
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 3.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -95,14 +97,14 @@
 						</div>
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 4.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -113,16 +115,16 @@
 
 
 				<!-- Row 2 -->
-				<div class="row pt-5">
+				<div class="row pt-5 pb-5">
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 1 row 2.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -130,14 +132,14 @@
 						</div> 
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 2 row 2.png" 
 							    class="card-img-bottom">
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -145,14 +147,14 @@
 						</div>
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 3 row 2.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -160,14 +162,14 @@
 						</div>
 					</div>
 					<div class="col">
-						<div class="card"> 
+						<div class="card border-light"> 
 							<img src= "images/Rectangle 4 row 2.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											GeeksforGeeks 
+											Read More 
 										</small> 
 									</p> 
 								</a>
@@ -179,10 +181,146 @@
 		</div>
 
 		<!-- Section 3 -->
-		<div class="container-fluid bg-primary">
-			<div class="container">
-				
+		<div class="container-fluid bg-primary pb-5">
+			<div class="container text-center">
+				<div>
+					<h2 class="py-5 text-white">COMING SOON</h2>
+				</div>
+				<div class="row">
+					<div class="col">
+						<div class="card bg-secondary o-card center-div text-white">
+							<h3>CLICK AND COLLECT</h3>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card bg-secondary o-card center-div text-white">
+							<h3>OFFICE CATERING</h3>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
+
+		<!-- Section 4 -->
+		<div class="container-fluid pb-5">
+			<div class="container text-center">
+				<div class="py-5">
+					<h2 class="text-primary">OUR LOCATIONS</h2>
+				</div>
+				<div class="row">
+					<div class="col">
+						<div class="card border-light">
+							<img src="images/Location image.png" class="card-img">
+							<div class="card-img-overlay text-white">
+								<a href="https://www.google.com/maps/dir/53.3044442,-6.2168398/greenville+deli+rathmines/@53.3126447,-6.2820741,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x48670dc4c9c779f5:0x35faf77ac42a12dc!2m2!1d-6.2658136!2d53.3214785?entry=ttu"><h3 class="card-title pt-5 text-white">RATHMINES</h3></a>
+								<!-- <h3 class="card-title pt-5">RATHMINES</h3> -->
+								<!-- Opening Hours -->
+								<h4 class="card-text pd-top-100">Opening Hours:</h4>
+								<p class="card-text pt-2">Monday - Thursday : 8am - 5pm</p>
+								<p class="cart-text">Friday & Saturday : 6am - 6pm</p>
+								<p class="card-text">Sunday : 9am - 5pm</p>
+								<!-- Contact -->
+								<h5 class="card-text pd-top-100">Phone : 089 986 0730</h5>
+								<h5 class="card-text pt-2">Email : hi@greenvilledeli.ie</h5>
+								<h5 class="card-text pt-2">Address : 312 Rathmines Rd Lower, Rathmines, Dublin 6, D06 HX53</h5>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card border-light">
+							<img src="images/Location image 2.png" class="card-img">
+							<div class="card-img-overlay text-white">
+								<a href="https://www.google.com/maps/dir/53.3044442,-6.2168398/Greenville+Deli,+Tyrconnell+Road,+Inchicore,+Dublin+8/@53.3238953,-6.3097829,13z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x48670d9d122006a1:0x27b830a7ec05c9b6!2m2!1d-6.3210298!2d53.3392484?entry=ttu"><h3 class="card-title pt-5 text-white">INCHCORE</h3></a>
+								<!-- <h3 class="card-title pt-5">INCHCORE</h3> -->
+								<!-- Opening Hours -->
+								<h4 class="card-text pd-top-100">Opening Hours:</h4>
+								<p class="card-text pt-2">Monday - Friday : 8am - 4pm</p>
+								<p class="card-text">Sunday : 9am - 5pm</p>
+								<!-- Contact -->
+								<h5 class="card-text pd-top-100">Phone : 089 975 3212</h5>
+								<h5 class="card-text pt-2">Email : hi@greenvilledeli.ie</h5>
+								<h5 class="card-text pt-2">Address : 5A Tyrconnell Rd Lower, Inchicore, Dublin 8, D08 R8Y2</h5>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Section 5 (form section)-->
+		<div class="container-md pb-5">
+			<div class="container bg-secondary">
+				<form class="py-5 px-5">
+					<div class="row">
+						<div class="col">
+							<input type="text" class="form-control border border-primary border-3" placeholder="First name">
+						</div>
+						<div class="col">
+							<input type="text" class="form-control border border-primary border-3" placeholder="Last name">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col">
+							<div class="form-group pt-4">
+								<input type="text" class="form-control border border-primary border-3" id="formGroupExampleInput" placeholder="Email Address">
+							</div>
+							<div class="d-grid gap-2 pt-4">
+								<button class="btn btn-primary" type="button">Button</button>
+							</div>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+
+		<!-- Section 6 (Review Section) -->
+		<div class="container-fluid py-5">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-6 col-lg-4">
+						<div class="r-card bg-primary card-hover mb-9">
+						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
+							<div class="card-icon-border-large border-primary mtn-80">
+							  <i class="fa fa-quote-left text-primary" aria-hidden="true"></i>
+							</div>
+							<blockquote class="blockquote blockquote-sm mt-2">
+							  <p class="text-white mb-5"> Greenville is such a fab addition to the neighbourhood!  This area has been lacking in a great little cafe so this is a perfect fit.</p>
+							  <footer class="blockquote-footer text-uppercase text-white">Clodagh MyGough</footer>
+							</blockquote>
+						  </div>
+						</div>
+					  </div>
+
+					  <div class="col-md-6 col-lg-4">
+						<div class="r-card bg-secondary card-hover mb-9">
+						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
+							<div class="card-icon-border-large border-secondary mtn-80">
+							  <i class="fa fa-quote-left text-secondary" aria-hidden="true"></i>
+							</div>
+							<blockquote class="blockquote blockquote-sm mt-2">
+							  <p class="text-white mb-5">The Asian pulled pork sandwich is massive. I hate that good quality “artisan” sandwiches cost €9 these days however this is one I felt was worth that kind of money.</p>
+							  <footer class="blockquote-footer text-uppercase text-white">Conor Murray</footer>
+							</blockquote>
+						  </div>
+						</div>
+					  </div>
+
+					  <div class="col-md-6 col-lg-4">
+						<div class="r-card bg-success card-hover mb-9">
+						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
+							<div class="card-icon-border-large border-success mtn-80">
+							  <i class="fa fa-quote-left text-success" aria-hidden="true"></i>
+							</div>
+							<blockquote class="blockquote blockquote-sm mt-2">
+							  <p class="text-white mb-5">Superb coffee shop near me. Great latte, lovely cakes and buns. Sandwiches looked good but have not tried yet.</p>
+							  <footer class="blockquote-footer text-uppercase text-white">Mark Conroy</footer>
+							</blockquote>
+						  </div>
+						</div>
+					  </div>
+				</div>
+			</div>
+		</div>
+
 	</body>
 </html>
