--- a/index.html
+++ b/index.html
@@ -249,8 +249,11 @@
 
 		<!-- Section 5 (form section)-->
 		<div class="container-md pb-5">
-			<div class="container bg-secondary">
-				<form class="py-5 px-5">
+			<div class="container bg-secondary text-center">
+				<div class="py-5">
+					<h2 class="text-white">SIGN UP FOR OUR NEWSLETTER</h2>
+				</div>
+				<form class="pb-5 px-5">
 					<div class="row">
 						<div class="col">
 							<input type="text" class="form-control border border-primary border-3" placeholder="First name">
@@ -265,7 +268,7 @@
 								<input type="text" class="form-control border border-primary border-3" id="formGroupExampleInput" placeholder="Email Address">
 							</div>
 							<div class="d-grid gap-2 pt-4">
-								<button class="btn btn-primary" type="button">Button</button>
+								<button class="btn btn-primary" type="button">Sign Up</button>
 							</div>
 						</div>
 					</div>
@@ -275,52 +278,109 @@
 
 		<!-- Section 6 (Review Section) -->
 		<div class="container-fluid py-5">
-			<div class="container">
-				<div class="row">
+			<div class="container text-center">
+				<div class="pb-5">
+					<h2 class="text-primary">WHAT OUR CUSTOMER THINK...</h2>
+				</div>
+				<div class="row pt-5">
 					<div class="col-md-6 col-lg-4">
 						<div class="r-card bg-primary card-hover mb-9">
-						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
-							<div class="card-icon-border-large border-primary mtn-80">
-							  <i class="fa fa-quote-left text-primary" aria-hidden="true"></i>
+							<div class="card-body text-center px-md-5 px-lg-6 my-2">
+								<div class="card-icon-border-large border-primary mtn-80">
+								<i class="fa fa-quote-left text-primary" aria-hidden="true"></i>
+								</div>
+								<blockquote class="blockquote blockquote-sm mt-2">
+								<p class="text-white mb-5"> Greenville is such a fab addition to the neighbourhood!  This area has been lacking in a great little cafe so this is a perfect fit.</p>
+								<footer class="blockquote-footer text-uppercase text-white">Clodagh MyGough</footer>
+								</blockquote>
 							</div>
-							<blockquote class="blockquote blockquote-sm mt-2">
-							  <p class="text-white mb-5"> Greenville is such a fab addition to the neighbourhood!  This area has been lacking in a great little cafe so this is a perfect fit.</p>
-							  <footer class="blockquote-footer text-uppercase text-white">Clodagh MyGough</footer>
-							</blockquote>
-						  </div>
+							</div>
 						</div>
-					  </div>
 
-					  <div class="col-md-6 col-lg-4">
-						<div class="r-card bg-secondary card-hover mb-9">
-						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
-							<div class="card-icon-border-large border-secondary mtn-80">
-							  <i class="fa fa-quote-left text-secondary" aria-hidden="true"></i>
+						<div class="col-md-6 col-lg-4">
+							<div class="r-card bg-secondary card-hover mb-9">
+							<div class="card-body text-center px-md-5 px-lg-6 my-2">
+								<div class="card-icon-border-large border-secondary mtn-80">
+								<i class="fa fa-quote-left text-secondary" aria-hidden="true"></i>
+								</div>
+								<blockquote class="blockquote blockquote-sm mt-2">
+								<p class="text-white mb-5">The Asian pulled pork sandwich is massive. I hate that good quality “artisan” sandwiches cost €9 these days however this is one I felt was worth that kind of money.</p>
+								<footer class="blockquote-footer text-uppercase text-white">Conor Murray</footer>
+								</blockquote>
 							</div>
-							<blockquote class="blockquote blockquote-sm mt-2">
-							  <p class="text-white mb-5">The Asian pulled pork sandwich is massive. I hate that good quality “artisan” sandwiches cost €9 these days however this is one I felt was worth that kind of money.</p>
-							  <footer class="blockquote-footer text-uppercase text-white">Conor Murray</footer>
-							</blockquote>
-						  </div>
+							</div>
 						</div>
-					  </div>
 
-					  <div class="col-md-6 col-lg-4">
-						<div class="r-card bg-success card-hover mb-9">
-						  <div class="card-body text-center px-md-5 px-lg-6 my-2">
-							<div class="card-icon-border-large border-success mtn-80">
-							  <i class="fa fa-quote-left text-success" aria-hidden="true"></i>
+						<div class="col-md-6 col-lg-4">
+							<div class="r-card bg-success card-hover mb-9">
+							<div class="card-body text-center px-md-5 px-lg-6 my-2">
+								<div class="card-icon-border-large border-success mtn-80">
+								<i class="fa fa-quote-left text-success" aria-hidden="true"></i>
+								</div>
+								<blockquote class="blockquote blockquote-sm mt-2">
+								<p class="text-white mb-5">Superb coffee shop near me. Great latte, lovely cakes and buns. Sandwiches looked good but have not tried yet.</p>
+								<footer class="blockquote-footer text-uppercase text-white">Mark Conroy</footer>
+								</blockquote>
 							</div>
-							<blockquote class="blockquote blockquote-sm mt-2">
-							  <p class="text-white mb-5">Superb coffee shop near me. Great latte, lovely cakes and buns. Sandwiches looked good but have not tried yet.</p>
-							  <footer class="blockquote-footer text-uppercase text-white">Mark Conroy</footer>
-							</blockquote>
-						  </div>
+							</div>
 						</div>
-					  </div>
 				</div>
 			</div>
 		</div>
+
+		<!-- Footer -->
+		<footer class="text-center text-lg-start text-muted bg-primary">
+			<!-- Section: Social media -->
+			<section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom text-white">
+				<div class="me-5 d-none d-lg-block">
+					<span>Get connected with us on social networks:</span>
+				</div>
+
+				<div>
+					<a href="" class="me-4 text-reset"><i class="fab fa-facebook-f"></i></a>
+					<a href="" class="me-4 text-reset"><i class="fab fa-twitter"></i></a>
+					<a href="" class="me-4 text-reset"><i class="fab fa-google"></i></a>
+					<a href="" class="me-4 text-reset"><i class="fab fa-instagram"></i></a>
+				</div>
+			</section>
+		
+			<!-- Section: Links  -->
+			<section class="text-white">
+			<div class="container text-center text-md-start mt-5">
+				<div class="row mt-3">
+				<div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+					<h6 class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>Greenville Deli</h6>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					</p>
+				</div>
+		
+				<div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+					<h6 class="text-uppercase fw-bold mb-4">Products</h6>
+					<p><a href="#!" class="text-reset">Angular</a></p>
+					<p><a href="#!" class="text-reset">React</a></p>
+					<p><a href="#!" class="text-reset">Vue</a></p>
+					<p><a href="#!" class="text-reset">Laravel</a></p>
+				</div>
+
+				<div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+					<!-- Links -->
+					<h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+					<p><i class="fas fa-home me-3"></i>312 Rathmines Rd Lower, Rathmines, Dublin 6, D06 HX53 </p>
+					<p><i class="fas fa-envelope me-3"></i>hi@greenvilledeli.ie</p>
+					<p><i class="fas fa-phone me-3"></i>089 986 0730</p>
+					<p><i class="fas fa-phone me-3"></i>089 975 3212</p>
+				</div>
+				</div>
+			</div>
+			</section>
+		
+			<!-- Copyright -->
+			<div class="text-center p-4 bg-primary text-white">
+			© 2021 Copyright:
+			<a class="text-reset fw-bold" href="https://mdbootstrap.com/">greenvilledeli.ie</a>
+			</div>
+		</footer>
 
 	</body>
 </html>
