--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 								<a href="#" class="text-white">
 									<p class="card-text"> 
 										<small> 
-											Read More 
+											Soup - Read More 
 										</small> 
 									</p> 
 								</a>
@@ -248,8 +248,8 @@
 		</div>
 
 		<!-- Section 5 (form section)-->
-		<div class="container-md pb-5">
-			<div class="container bg-secondary text-center">
+		<div class="container-md pb-5 bg-secondary">
+			<div class="container text-center">
 				<div class="py-5">
 					<h2 class="text-white">SIGN UP FOR OUR NEWSLETTER</h2>
 				</div>
@@ -377,7 +377,7 @@
 		
 			<!-- Copyright -->
 			<div class="text-center p-4 bg-primary text-white">
-			© 2021 Copyright:
+			© 2023 Copyright:
 			<a class="text-reset fw-bold" href="https://mdbootstrap.com/">greenvilledeli.ie</a>
 			</div>
 		</footer>
