Adding new pages

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 				<div class="row pt-5">
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 1.png" 
+							<img src= "images/soup.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
-								<a href="#" class="text-white">
-									<p class="card-text"> 
+								<a href="menu.html" class="text-white">
+									<p class="card-text text-shadow"> 
 										<small> 
 											Soup - Read More 
 										</small> 
@@ -68,13 +68,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 2.png" 
+							<img src= "images/breakfast_toastie.png" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Breakfast Toasties - Read More
 										</small> 
 									</p> 
 								</a>
@@ -83,13 +83,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 3.png" 
+							<img src= "images/Ham-and-cheese-croissants-square.jpg" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Ham & Cheese Crossaints - Read More
 										</small> 
 									</p> 
 								</a>
@@ -98,13 +98,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 4.png" 
+							<img src= "images/Vegan-Sandwich-Recipes-image.jpg" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Vegan Options - Read More
 										</small> 
 									</p> 
 								</a>
@@ -118,13 +118,13 @@
 				<div class="row pt-5 pb-5">
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 1 row 2.png" 
+							<img src= "images/Rotisserie-Chicken-Sandwich-202-2000-485b673fe411460e95b512fbf805a5d9.jpg" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Chicken Options - Read More 
 										</small> 
 									</p> 
 								</a>
@@ -133,13 +133,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 2 row 2.png" 
+							<img src= "images/Cuban-Style-Pork-Sandwiches_EXPS_SCMBZ17_133011_B01_11_1b-2.jpg" 
 							    class="card-img-bottom">
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Pork Options - Read More 
 										</small> 
 									</p> 
 								</a>
@@ -148,13 +148,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 3 row 2.png" 
+							<img src= "images/festive.jpg" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Festive Options - Read More
 										</small> 
 									</p> 
 								</a>
@@ -163,13 +163,13 @@
 					</div>
 					<div class="col">
 						<div class="card border-light"> 
-							<img src= "images/Rectangle 4 row 2.png" 
+							<img src= "images/breakfast_pots.jfif" 
 							    class="card-img-bottom"> 
 							<div class="card-body card-img-overlay text-white bottom-div"> 
 								<a href="#" class="text-white">
-									<p class="card-text"> 
+									<p class="card-text text-shadow"> 
 										<small> 
-											Read More 
+											Breakfast Options - Read More
 										</small> 
 									</p> 
 								</a>
@@ -188,14 +188,20 @@
 				</div>
 				<div class="row">
 					<div class="col">
-						<div class="card bg-secondary o-card center-div text-white">
-							<h3>CLICK AND COLLECT</h3>
-						</div>
+						<a href="click&collect.html">
+							<div class="card bg-secondary o-card center-div text-white">
+								<!-- <a class="text-white" href="click&collect.html"><h3>CLICK AND COLLECT</h3></a> -->
+								<h3>CLICK & COLLECT</h3>
+							</div>
+						</a>
 					</div>
 					<div class="col">
-						<div class="card bg-secondary o-card center-div text-white">
-							<h3>OFFICE CATERING</h3>
-						</div>
+						<a href="officeCatering.html">
+							<div class="card bg-secondary o-card center-div text-white">
+								<!-- <a class="text-white" href="click&collect.html"><h3>CLICK AND COLLECT</h3></a> -->
+								<h3>OFFICE CATERING</h3>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
