Updating Menu Page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Greenville Deli CA Project</title>
 	<link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -182,14 +181,14 @@
 
 		<!-- Section 3 -->
 		<div class="container-fluid bg-primary pb-5">
-			<div class="container text-center">
+			<div class="container text-center coming-soon">
 				<div>
 					<h2 class="py-5 text-white">COMING SOON</h2>
 				</div>
 				<div class="row">
 					<div class="col">
 						<a href="click&collect.html">
-							<div class="card bg-secondary o-card center-div text-white">
+							<div class="card bg-secondary c-card center-div text-white">
 								<!-- <a class="text-white" href="click&collect.html"><h3>CLICK AND COLLECT</h3></a> -->
 								<h3>CLICK & COLLECT</h3>
 							</div>
@@ -197,7 +196,7 @@
 					</div>
 					<div class="col">
 						<a href="officeCatering.html">
-							<div class="card bg-secondary o-card center-div text-white">
+							<div class="card bg-secondary c-card center-div text-white">
 								<!-- <a class="text-white" href="click&collect.html"><h3>CLICK AND COLLECT</h3></a> -->
 								<h3>OFFICE CATERING</h3>
 							</div>
