--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="css/main.css">
-	<link rel="stylesheet" href="css/style.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,28 +28,91 @@
     </nav>
 
     <!-- Middle Section -->
-    <div class="container-fluid">
-        <div class="container pd-top-100 text-center pb-5">
-            <div class="row">
-                <div class="col border border-success">
-                    <div class="text-secondary">
-                        <h2>BREAKFAST</h2>
-                    </div>
-                    <div>
-                        <h5>HOMEMADE SAUSAGE ROLL</h5>
-                    </div>
+    <section>
+        <div class="container-fluid">
+        <div class="container pd-top-100 pb-5 text-center">
+            <div>
+                <h2 class="py-5 text-primary">OUR MENU</h2>
+            </div>
+            <ul class="nav nav-tabs justify-content-center" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="breakfast-tab" data-bs-toggle="tab" data-bs-target="#breakfast-tab-pane" type="button" role="tab" aria-controls="breakfast-tab-pane" aria-selected="true">Breakfast</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="lunch-tab" data-bs-toggle="tab" data-bs-target="#lunch-tab-pane" type="button" role="tab" aria-controls="lunch-tab-pane" aria-selected="false">Lunch</button>
+            </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+                <!-- Breakfast -->
+            <div class="tab-pane fade show active text-center pt-4" id="breakfast-tab-pane" role="tabpanel" aria-labelledby="breakfast-tab" tabindex="0">
+                <div class="menu">
+                    <h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5>
+                    <p>'Full Irish' or chorizo, both with homemade ketchup</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
                 </div>
-                <div class="col border border-success">
-                    <div class="text-secondary">
-                        <h2>LUNCH</h2>
-                    </div>
-                    <div>
-                        <h5>THE CHICKEN CHORIZO</h5>
-                    </div>
+                <div>
+                    <h5 class="text-primary">VEGAN SAUSAGE ROLL</h5>
+                    <p>With homemade ketchup</p>
+                    <h5>€4.50</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">BREAKFAST TOASTIE</h5>
+                    <p>With streaky bacon, black pudding & pork sausages & our homemade spiced kethcup</p>
+                    <h5>€6.50</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">HAM & CHEESE CROISSANTS</h5>
+                    <p>With pesto & bechamel</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">BREAKFAST POTS</h5>
+                    <p>24 hour overnight oats & granola pots</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
                 </div>
             </div>
+            <!-- Lunch -->
+            <div class="tab-pane fade pt-4" id="lunch-tab-pane" role="tabpanel" aria-labelledby="lunch-tab" tabindex="0">
+                <div class="menu">
+                    <h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5>
+                    <p>'Full Irish' or chorizo, both with homemade ketchup</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">VEGAN SAUSAGE ROLL</h5>
+                    <p>With homemade ketchup</p>
+                    <h5>€4.50</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">BREAKFAST TOASTIE</h5>
+                    <p>With streaky bacon, black pudding & pork sausages & our homemade spiced kethcup</p>
+                    <h5>€6.50</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">HAM & CHEESE CROISSANTS</h5>
+                    <p>With pesto & bechamel</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">BREAKFAST POTS</h5>
+                    <p>24 hour overnight oats & granola pots</p>
+                    <h5>€4</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+            </div>
+            </div>
         </div>
-    </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer class="text-center text-lg-start text-muted bg-primary">
@@ -105,5 +167,6 @@
         <a class="text-reset fw-bold" href="https://mdbootstrap.com/">greenvilledeli.ie</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
