Finishing menu page

--- a/menu.html
+++ b/menu.html
@@ -79,33 +79,45 @@
             <!-- Lunch -->
             <div class="tab-pane fade pt-4" id="lunch-tab-pane" role="tabpanel" aria-labelledby="lunch-tab" tabindex="0">
                 <div class="menu">
-                    <h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5>
-                    <p>'Full Irish' or chorizo, both with homemade ketchup</p>
-                    <h5>€4</h5>
+                    <h5 class="text-primary">THE CHICKEN CHORIZO</h5>
+                    <p>Slices of smokey chipotle chicken breast, spicy chorizo, zesty avocado mayo, rosated plum tomatoes & peppery rocket on sourdough</p>
+                    <h5>€9</h5>
                     <hr class="hr hr-blurry" />
                 </div>
                 <div>
-                    <h5 class="text-primary">VEGAN SAUSAGE ROLL</h5>
-                    <p>With homemade ketchup</p>
+                    <h5 class="text-primary">THE MEXICAN MELT</h5>
+                    <p>crispy bacon, chunks of chorizo & jalapenos smothered in our chipotle aioli & topped with loads of freshly grated mozzarella on sourdough</p>
+                    <h5>€90</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">CHEESE & HAM</h5>
+                    <P>Hand carved maple glazed ham, smoked applewood, mozzarella & mature red cheddar, homemade bechamel & mustard mayo on sourdough</P>
+                    <h5>€8.50</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">THE CHRISTMAS SPECIAL</h5>
+                    <p>Roasted turkey breast, honey glazed ham, homemade stuffing, pickled red cabbage, cranberry sauce & mustard aioli on sourdough</p>
+                    <h5>€9</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">THE ASIAN PULLED PORK</h5>
+                    <p>Slow cooked pulled pork, spicy asian slaw, house pickled cuccumber, chillies, fresh rocket & homemade peanut rayu aioli on sourdough</p>
+                    <h5>€9</h5>
+                    <hr class="hr hr-blurry" />
+                </div>
+                <div>
+                    <h5 class="text-primary">THE CHRISTMAS VEGAN</h5>
+                    <p>Roasted sweet potato and green lentils with nutmeg, cinnamon & cloves, vegan stuffing, mustard mayo and cranberry sauce on sourdough</p>
+                    <h5>€9</h5>
+                    <hr class="hr hr-blurry" />
+                </div>`
+                <div>
+                    <h5 class="text-primary">SOUP OF THE DAY WITH SOURDOUGH | ADD A SANDWICH FOR €3</h5>
+                    <p>Sandwiches come with a little bag of crisps & our homemade seasoned dip</p>
                     <h5>€4.50</h5>
-                    <hr class="hr hr-blurry" />
-                </div>
-                <div>
-                    <h5 class="text-primary">BREAKFAST TOASTIE</h5>
-                    <p>With streaky bacon, black pudding & pork sausages & our homemade spiced kethcup</p>
-                    <h5>€6.50</h5>
-                    <hr class="hr hr-blurry" />
-                </div>
-                <div>
-                    <h5 class="text-primary">HAM & CHEESE CROISSANTS</h5>
-                    <p>With pesto & bechamel</p>
-                    <h5>€4</h5>
-                    <hr class="hr hr-blurry" />
-                </div>
-                <div>
-                    <h5 class="text-primary">BREAKFAST POTS</h5>
-                    <p>24 hour overnight oats & granola pots</p>
-                    <h5>€4</h5>
                     <hr class="hr hr-blurry" />
                 </div>
             </div>
