--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 </head>
 	<body>
-		<!-- Nav Bar -->
 		<nav class="navbar fixed-top bg-primary nav-height">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="#">
@@ -24,9 +23,10 @@
 					<path id="Burger Menu_2" d="M3 3H43M3 18H43M3 33H43" stroke="#F8F8F8" stroke-width="4.5" stroke-linecap="round" stroke-linejoin="round"/>
 					</g>
 					</svg>
-				</a>
+				</a>			
 			</div>
 		</nav>
+
 
 		<!-- Section 1 -->
 		<div class="container-fluid bg-image center-div">
@@ -387,5 +387,6 @@
 			</div>
 		</footer>
 
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 	</body>
 </html>
