--- a/click&collect.html
+++ b/click&collect.html
@@ -16,10 +16,10 @@
 <!-- Nav Bar -->
     <nav class="navbar fixed-top bg-primary nav-height">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="Bootstrap" width="86" height="42" class="pl-1 flex">
             </a>
-            <a href="#" class="flex pb-1"><svg width="35" height="25" viewBox="0 0 46 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="menu.html" class="flex pb-1"><svg width="35" height="25" viewBox="0 0 46 36" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="Burger Menu">
                 <path id="Burger Menu_2" d="M3 3H43M3 18H43M3 33H43" stroke="#F8F8F8" stroke-width="4.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </g>
