--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     <!-- Nav Bar -->
     <nav class="navbar fixed-top bg-primary nav-height">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
             <img src="images/logo.png" alt="Bootstrap" width="86" height="42" class="pl-1 flex">
             </a>
             <a href="#" class="flex pb-1"><svg width="35" height="25" viewBox="0 0 46 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,7 +46,8 @@
                 <!-- Breakfast -->
             <div class="tab-pane fade show active text-center pt-4" id="breakfast-tab-pane" role="tabpanel" aria-labelledby="breakfast-tab" tabindex="0">
                 <div class="menu">
-                    <h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5>
+                    <a href="#"><h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5></a>
+                    <!-- <h5 class="text-primary">HOMEMADE SAUSAGE ROLL</h5> -->
                     <p>'Full Irish' or chorizo, both with homemade ketchup</p>
                     <h5>€4</h5>
                     <hr class="hr hr-blurry" />
@@ -85,8 +86,8 @@
                     <hr class="hr hr-blurry" />
                 </div>
                 <div>
-                    <h5 class="text-primary">THE MEXICAN MELT</h5>
-                    <p>crispy bacon, chunks of chorizo & jalapenos smothered in our chipotle aioli & topped with loads of freshly grated mozzarella on sourdough</p>
+                    <a href="product.html"><h5 class="text-primary">THE MEXICAN MELT</h5></a>
+                    <p>Crispy bacon, chunks of chorizo & jalapenos smothered in our chipotle aioli & topped with loads of freshly grated mozzarella on sourdough</p>
                     <h5>€90</h5>
                     <hr class="hr hr-blurry" />
                 </div>
@@ -115,7 +116,7 @@
                     <hr class="hr hr-blurry" />
                 </div>`
                 <div>
-                    <h5 class="text-primary">SOUP OF THE DAY WITH SOURDOUGH | ADD A SANDWICH FOR €3</h5>
+                    <h5 class="text-primary">SOUP OF THE DAY | ADD A SANDWICH FOR €3</h5>
                     <p>Sandwiches come with a little bag of crisps & our homemade seasoned dip</p>
                     <h5>€4.50</h5>
                     <hr class="hr hr-blurry" />
