--- a/click&collect.html
+++ b/click&collect.html
@@ -48,7 +48,7 @@
                     <h5>Would you like to set a reminder to be notified when its time?</h5>
                     <br>
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Set a reminder
+                        SET A REMINDER
                     </button>
 
                     <!-- Modal -->
@@ -71,8 +71,8 @@
                                 </form>
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Set reminder</button>
+                            <button type="button" class="btn btn-secondary text-white" data-bs-dismiss="modal">CLOSE</button>
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">SET REMINDER</button>
                             </div>
                         </div>
                         </div>
