--- a/product.html
+++ b/product.html
@@ -39,7 +39,7 @@
                         <input class="form-control text-center me-3" id="inputQuantity" type="num" value="1" style="max-width: 3rem" />
                         <button class="btn btn-primary flex-shrink-0" type="button">
                             <i class="bi-cart-fill me-1"></i>
-                            Order Online Soon
+                            ORDER ONLINE SOON
                         </button>
                     </div>
                     <div class="col md-2 mt-5">
